# OBI

./: .gitignore  README.md
cpp/OBI/2021/PhaseOne/Idade de Camila/: Idade de camila.cpp
csharp/: Program.cs
csharp/2021/LevelTwo/PhaseOne/: ZeroToCancel.cs
csharp/2021/LevelTwo/PhaseTwo/: TennisDoubles.cs
csharp/2021/PhaseOne/: Deck.cs
csharp/2021/PhaseTwo/: Sandwich.cs
csharp/Solutions.Utils/: BasicSortedList.cs
csharp/Solutions/2021/PhaseOne/: Deck.cs  ResponseTime.cs  TennisTournament.cs  ZeroToCancel.cs
csharp/Solutions/2021/PhaseTwo/: CamillaAge.cs  Sandwich.cs  TennisDoubles.cs
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
