[package]
name = "obi_solutions"
description = """
Solutions to the "Sênior" level questions of the Brazilian Informatica Olympiad (OBI).
"""
version = "0.0.0"
authors = ["Arthur Damasceno <damascenoarthur653@gmail.com>"]
repository = "https://github.com/KleberLeite/OBI"
license = "MIT"
edition = "2021"

[lib]
name = "input"
