[package]
name = "obi_solutions"
description = """
Solutions to the "Sênior" level questions of the Brazilian Informatica Olympiad (OBI).
"""
version = "0.0.0"
authors = ["Arthur Damasceno <damascenoarthur653@gmail.com>"]
repository = "https://github.com/KleberLeite/OBI"
license = "MIT"
edition = "2021"

[lib]
name = "input"

[[bin]]
name = "zero_to_cancel"
path = "src/bin/2021/zero_to_cancel.rs"

[[bin]]
name = "tennis_tournament"
path = "src/bin/2021/tennis_tournament.rs"

[[bin]]
name = "response_time"
path = "src/bin/2021/response_time.rs"

[[bin]]
name = "deck"
path = "src/bin/2021/deck.rs"

[[bin]]
name = "tennis_doubles"
path = "src/bin/2021/tennis_doubles.rs"

[[bin]]
name = "minmax"
path = "src/bin/2021/minmax.rs"

[[bin]]
name = "palindrome_list"
path = "src/bin/2021/palindrome_list.rs"

[[bin]]
name = "anagram"
path = "src/bin/2021/anagram.rs"
